updated apm to claymore, no new model yet

--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -1097,17 +1097,17 @@
 	"ssbrc.fighter.snake.reload.prefix": " (Press ",
 	"ssbrc.fighter.snake.reload.suffix": " to reload)",
 	"ssbrc.fighter.snake.scavenger": "Scavenger",
-	"ssbrc.fighter.snake.scavenger.anti_personnel_mine": "Anti-Personnel Mines",
+	"ssbrc.fighter.snake.scavenger.claymore": "Anti-Personnel Mines",
 	"ssbrc.fighter.snake.scavenger.famas": "FAMAS Mag",
 	"ssbrc.fighter.snake.scavenger.psg1": "PSG-1 Mags",
 	"ssbrc.fighter.snake.scavenger.m870_custom": "m870_custom Shells",
 	"ssbrc.fighter.snake.scavenger.smoke_grenade": "Smoke Grenades",
 	"ssbrc.fighter.snake.scavenger.socom": "SOCOM Clips",
-	"ssbrc.fighter.snake.anti_personnel_mine": "Anti-Personnel Mine",
-	"ssbrc.fighter.snake.anti_personnel_mine.type": " - Lethal (",
-	"ssbrc.fighter.snake.anti_personnel_mine.description": "A deployable mine that takes time to arm. Explodes when an opponent or projectile comes into contact, dealing high damage.",
-	"ssbrc.fighter.snake.anti_personnel_mine.description.1": "] to drop a mine",
-	"ssbrc.fighter.snake.anti_personnel_mine.description.2": "- Takes a few seconds to arm",
+	"ssbrc.fighter.snake.claymore": "Anti-Personnel Mine",
+	"ssbrc.fighter.snake.claymore.type": " - Lethal (",
+	"ssbrc.fighter.snake.claymore.description": "A deployable mine that takes time to arm. Explodes when an opponent or projectile comes into contact, dealing high damage.",
+	"ssbrc.fighter.snake.claymore.description.1": "] to drop a mine",
+	"ssbrc.fighter.snake.claymore.description.2": "- Takes a few seconds to arm",
 	"ssbrc.fighter.snake.famas": "FAMAS",
 	"ssbrc.fighter.snake.famas.type": " - Assault Rifle (",
 	"ssbrc.fighter.snake.famas.description": "A weapon with a high rate of fire, at the cost of damage and ammo usage.",
