--- a/src/assets/ssbrc/lang/es_ar.json
+++ b/src/assets/ssbrc/lang/es_ar.json
@@ -839,17 +839,17 @@
 	"ssbrc.fighter.snake.reload.prefix": " (Presione ",
 	"ssbrc.fighter.snake.reload.suffix": " para recargar)",
 	"ssbrc.fighter.snake.scavenger": "Carroñero",
-	"ssbrc.fighter.snake.scavenger.anti_personnel_mine": "Minas antipersonal",
+	"ssbrc.fighter.snake.scavenger.claymore": "Minas antipersonal",
 	"ssbrc.fighter.snake.scavenger.famas": "Cargadores FAMAS",
 	"ssbrc.fighter.snake.scavenger.psg1": "Cargadores PSG-1",
 	"ssbrc.fighter.snake.scavenger.m870_custom": "Conchas m870_custom",
 	"ssbrc.fighter.snake.scavenger.smoke_grenade": "Granadas de humo",
 	"ssbrc.fighter.snake.scavenger.socom": "Cartucho SOCOM",
-	"ssbrc.fighter.snake.anti_personnel_mine": "Mina antipersonal",
-	"ssbrc.fighter.snake.anti_personnel_mine.type": " - Letal (",
-	"ssbrc.fighter.snake.anti_personnel_mine.description": "Una mina desplegable que lleva tiempo armar. Explota cuando un oponente o proyectil entra en contacto, causando un gran daño.",
-	"ssbrc.fighter.snake.anti_personnel_mine.description.1": "] para tirar una mina",
-	"ssbrc.fighter.snake.anti_personnel_mine.description.2": "- Tarda unos segundos en armarse",
+	"ssbrc.fighter.snake.claymore": "Mina antipersonal",
+	"ssbrc.fighter.snake.claymore.type": " - Letal (",
+	"ssbrc.fighter.snake.claymore.description": "Una mina desplegable que lleva tiempo armar. Explota cuando un oponente o proyectil entra en contacto, causando un gran daño.",
+	"ssbrc.fighter.snake.claymore.description.1": "] para tirar una mina",
+	"ssbrc.fighter.snake.claymore.description.2": "- Tarda unos segundos en armarse",
 	"ssbrc.fighter.snake.famas": "FAMAS",
 	"ssbrc.fighter.snake.famas.type": " - Fusil de asalto (",
 	"ssbrc.fighter.snake.famas.description": "Un arma con una alta cadencia de fuego, a costa de daños y uso de munición.",
