misc item fixes, lang file stuff, and Codex test

--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -1692,8 +1692,36 @@
 	"ssbrc.smash_item.angel_feather": "Angel Feather",
 	"ssbrc.smash_item.angel_feather.description.1": "- Drastically increases jump height and grants slow falling",
 	"ssbrc.smash_item.angel_feather.description.2": "- Lasts for a single jump",
+	"ssbrc.smash_item.banana_peel": "Banana Peel",
+	"ssbrc.smash_item.beam_sword": "Beam Sword",
+	"ssbrc.smash_item.black_hole": "Black Hole",
+	"ssbrc.smash_item.bob_omb": "Bob-Omb",
+	"ssbrc.smash_item.bombchu": "Bombchu",
+	"ssbrc.smash_item.bunny_hood": "Bunny Hood",
+	"ssbrc.smash_item.cloaking_device": "Cloaking Device",
+	"ssbrc.smash_item.cracker_launcher": "Cracker Launcher",
+	"ssbrc.smash_item.deaths_scythe": "Death's Scythe",
+	"ssbrc.smash_item.food": "Food",
+	"ssbrc.smash_item.franklin_badge": "Franklin Badge",
+	"ssbrc.smash_item.freezie": "Freezie",
+	"ssbrc.smash_item.green_shell": "Green Shell",
+	"ssbrc.smash_item.healing_field": "Healing Field",
+	"ssbrc.smash_item.killing_edge": "Killing Edge",
+	"ssbrc.smash_item.lips_stick": "Lip's Stick",
+	"ssbrc.smash_item.maxim_tomato": "Maxim Tomato",
+	"ssbrc.smash_item.motion_sensor_bomb": "Motion Sensor Bomb",
+	"ssbrc.smash_item.pitfall_seed": "Pitfall Seed",
+	"ssbrc.smash_item.poison_mushroom": "Poison Mushroom",
+	"ssbrc.smash_item.pow_block": "POW Block",
 	"ssbrc.smash_item.power_pellet": "Power Pellet",
 	"ssbrc.smash_item.power_pellet.description": "- Allows ghosts to be eaten temporarily",
+	"ssbrc.smash_item.ramblin_evil_mushroom": "Ramblin' Evil Mushroom",
+	"ssbrc.smash_item.ray_gun": "Ray Gun",
+	"ssbrc.smash_item.special_flag": "Special Flag",
+	"ssbrc.smash_item.steel_diver": "Steel Diver",
+	"ssbrc.smash_item.super_mushroom": "Super Mushroom",
+	"ssbrc.smash_item.super_mushroom.description.1": "On pickup, the user grows in size for 10 seconds, gaining the following buffs:",
+	"ssbrc.smash_item.team_healer": "Team Healer",
 
 	"ssbrc.smash_item.activation": "Activation Item",
 	"ssbrc.smash_item.activation.activate": "] to activate",
