--- a/src/assets/minecraft/lang/en_us.json
+++ b/src/assets/minecraft/lang/en_us.json
@@ -26,6 +26,6 @@
 	"key.mouse.right": "R Click",
 	"key.mouse.middle": "M Click",
 
-	"recipe.toast.description": "Check your inventory",
+	"recipe.toast.description": "New Fighter Data",
 	"recipe.toast.title": "Codex Updated!"
 }
