--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -349,6 +349,7 @@
 	"ssbrc.skin.penguin": "Penguin Suit",
 	"ssbrc.skin.tennis": "Tennis: Aces",
 	"ssbrc.fighter.super_mario_bros.hammer": "Hammer",
+	"ssbrc.fighter.super_mario_bros.tennis_racket": "Tennis Racket",
 	"ssbrc.fighter.super_mario_bros.super_jump": "Super Jump",
 	"ssbrc.fighter.super_mario_bros.super_jump.description.1": "] to charge",
 	"ssbrc.fighter.super_mario_bros.super_jump.description.2": "- Grants a single powerful jump",
@@ -390,7 +391,6 @@
 	"ssbrc.peach.skin.shadow_queen.origin": "Paper Mario: The Thousand-Year Door (2004)",
 	"ssbrc.fighter.peach.frying_pan": "Frying Pan",
 	"ssbrc.fighter.peach.golf_club": "Golf Club",
-	"ssbrc.fighter.peach.tennis_racket": "Tennis Racket",
 	"ssbrc.fighter.peach.trowel": "Trowel",
 	"ssbrc.fighter.bowser": "Bowser",
 	"ssbrc.skin.bowsette": "Bowsette",
