--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -144,8 +144,12 @@
 	"ssbrc.lobby.tips.39": "Enjoying the game? Be sure to like and follow us and our projects on Planet Minecraft!",
 	"ssbrc.lobby.tips.40": "To preserve your speed with Sonic or Shadow, be sure to press the sprint button again right after attacking!",
 
-	"ssbrc.sandbag.intro.1": "Hey you! Come over here for a second, will you?",
-	"ssbrc.sandbag.intro.2": "That's the spirit! Welcome to Super Smash Bros. Re:Crafted! You're new around here, huh? That's alright, I'm here to get you up to speed and ready to fight! My name is Mr. Sandbag. Here, take this Selector. Now point it at me and use it to talk to me!",
+	"ssbrc.tutorial.intro.1": "Hey, Link! Come over here for a second, will you?",
+	"ssbrc.tutorial.intro.2": "That's the spirit! Welcome to Super Smash Bros. Re:Crafted! We sure could use your help.",
+	"ssbrc.tutorial.intro.2.1": "Wait... where are your items?",
+	"ssbrc.tutorial.intro.2.2.1": "You lost them? That's alright, I'm here to get you up to speed and ready to fight! My name is Mr. Sandbag. Do you remember how Interacting works? Just click",
+	"ssbrc.tutorial.intro.2.2.2": "to interact with things! Try it on me now.",
+	"ssbrc.tutorial.intro.2.3": "Nice job! My name is Mr. Sandbag. You're in the Mirror Temple; There should be copies of your items laying around here somewhere. Check this chest behind me.",
 	"ssbrc.sandbag.reminder.1": "Hey! You lost? To get started, walk over to the pad to my left!",
 	"ssbrc.sandbag.reminder.2": "What happened last game? Get in there and start fighting!",
 	"ssbrc.sandbag.intro.3": "Great job! You're getting the hang of this. You'll need that item to select fighters and interact with other objects! When you're ready, walk over to the pad to my left to start a match! I'll help you further in there.",
