victory theme fixes

--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -145,14 +145,13 @@
 	"ssbrc.lobby.tips.40": "To preserve your speed with Sonic or Shadow, be sure to press the sprint button again right after attacking!",
 
 	"ssbrc.tutorial.intro.1": "Hey, Link! Come over here for a second, will you?",
-	"ssbrc.tutorial.intro.2": "That's the spirit! Welcome to Super Smash Bros. Re:Crafted! We sure could use your help.",
-	"ssbrc.tutorial.intro.2.1": "Wait... where are your items?",
-	"ssbrc.tutorial.intro.2.2.1": "You lost them? That's alright, I'm here to get you up to speed and ready to fight! My name is Mr. Sandbag. Do you remember how Interacting works? Just click",
-	"ssbrc.tutorial.intro.2.2.2": "to interact with things! Try it on me now.",
-	"ssbrc.tutorial.intro.2.3": "Nice job! My name is Mr. Sandbag. You're in the Mirror Temple; There should be copies of your items laying around here somewhere. Check this chest behind me.",
+	"ssbrc.tutorial.intro.2.1": "That's the spirit! Welcome to Super Smash Bros. Re:Crafted! We sure could use your help.",
+	"ssbrc.tutorial.intro.2.2": "Wait... where are your items?",
+	"ssbrc.tutorial.intro.2.3.1": "You lost them? That's alright, I'm here to get you up to speed and ready to fight! My name is Mr. Sandbag. Do you remember how Interacting works? Just click",
+	"ssbrc.tutorial.intro.2.3.2": "to interact with things! Try it on me now.",
+	"ssbrc.tutorial.intro.3": "Nice job! You're getting the hang of this. You're in the Mirror Temple; There should be copies of your items laying around here somewhere. Check this chest behind me.",
 	"ssbrc.sandbag.reminder.1": "Hey! You lost? To get started, walk over to the pad to my left!",
 	"ssbrc.sandbag.reminder.2": "What happened last game? Get in there and start fighting!",
-	"ssbrc.sandbag.intro.3": "Great job! You're getting the hang of this. You'll need that item to select fighters and interact with other objects! When you're ready, walk over to the pad to my left to start a match! I'll help you further in there.",
 	"ssbrc.sandbag.fighter_select.1": "You made it, good! In this room, you can select a fighter to enter the battle with. Each fighter has a different set of attributes and abilities. To select a fighter, aim your Selector at them and use it!",
 	"ssbrc.sandbag.fighter_select.unowned": "This fighter is currently locked! Fighters highlighted in red will not be able to be selected until you purchase them in the shop.",
 	"ssbrc.sandbag.fighter_select.2": "Great job! You have now selected a fighter. In your hotbar, you will notice you now have two new items: Skin Options and Wiki. Though you don't have any skins yet, Skin Options will eventually list out all of the skins you have unlocked for that fighter. Wiki will take you to the wiki page for that fighter, which will give much more detailed info on their moveset.",
