lots of sora stuff, as well as WIP new attack

--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -1536,7 +1536,6 @@
 	"ssbrc.sora.skin.timeless_river.origin": "Kingdom Hearts II (2005)",
 	"ssbrc.fighter.sora.magic": "MP: ",
 	"ssbrc.fighter.sora.drive": "Drive: ",
-	"ssbrc.fighter.sora.kingdom_key": "Kingdom Key",
 	"ssbrc.fighter.sora.fire": "Fire",
 	"ssbrc.fighter.sora.blizzard": "Blizzard",
 	"ssbrc.fighter.sora.thunder": "Thunder",
@@ -1556,9 +1555,16 @@
 	"ssbrc.fighter.sora.keyblade.cycle_spell": "] to cycle selected spell",
 	"ssbrc.fighter.sora.keyblade.strike_raid.description.1": "] with both keyblades equipped to Strike Raid",
 	"ssbrc.fighter.sora.keyblade.strike_raid.description.2": "- Throws offhanded keyblade forward, dealing damage before returning",
-	"ssbrc.fighter.sora.star_seeker": "Star Seeker",
-	"ssbrc.fighter.sora.monochrome": "Monochrome",
-	"ssbrc.fighter.sora.classic_tone": "Classic Tone",
+	"ssbrc.fighter.sora.keyblade_primary.default": "Kingdom Key",
+	"ssbrc.fighter.sora.keyblade_secondary.default": "Star Seeker",
+	"ssbrc.fighter.sora.keyblade_primary.timeless_river": "Monochrome",
+	"ssbrc.fighter.sora.keyblade_secondary.timeless_river": "Classic Tone",
+	"ssbrc.fighter.sora.keyblade_primary.space_paranoids": "Photon Debugger",
+	"ssbrc.fighter.sora.keyblade_secondary.space_paranoids": "Bond of Flame",
+	"ssbrc.fighter.sora.keyblade_primary.birth_by_sleep": "Wayward Wind",
+	"ssbrc.fighter.sora.keyblade_secondary.birth_by_sleep": "Chaos Ripper",
+	"ssbrc.fighter.sora.keyblade_valor.birth_by_sleep": "Earthshaker",
+	"ssbrc.fighter.sora.keyblade_wisdom.birth_by_sleep": "Rainfell",
 	"ssbrc.fighter.sora.valor_form": "Valor Form",
 	"ssbrc.fighter.sora.valor_form.description.1": "] to switch to Valor Form",
 	"ssbrc.fighter.sora.valor_form.description.2": "Gains Strike Raid to attack from a distance",
