--- a/src/assets/ssbrc/lang/en_us.json
+++ b/src/assets/ssbrc/lang/en_us.json
@@ -999,6 +999,9 @@
 	"ssbrc.skin.young_lion": "Young Lion",
 	"ssbrc.roy.skin.young_lion.desc": "This 15 year old youth takes command of the Lycian army.",
 	"ssbrc.roy.skin.young_lion.origin": "Fire Emblem: The Binding Blade (2002)",
+	"ssbrc.fighter.roy.sword.default": "Binding Blade",
+	"ssbrc.fighter.roy.sword.awakening": "Roy's Blade",
+	"ssbrc.fighter.roy.sword.blazing_bachelor": "Blazing Polearm",
 	"ssbrc.fighter.byleth": "Byleth",
 	"ssbrc.skin.awakened": "Awakened",
 	"ssbrc.byleth.skin.awakened.desc": "A new hair color after awakening to their true powers.",
